build: JDK 25 LTS and JavaFX 25.0.4
JitPack builds on openjdk25, the pom says maven.compiler.release 25 instead of
source/target (source/target compile against the running JDK, so they check nothing
on a maintainer box running a newer one), and CI sets up Java 25.

Proved before anything was touched: a throwaway JitPack branch build of
botmaker-studio-api reported "Setting java 25.0.2-open as default" and published a
jar whose class-file major version is 69 (Java 25). No SDKMAN before_install needed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>